--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "livePreview.defaultPreviewPath": "d:\\Workspace\\JavaPrj\\ECMA5\\브라우저객체.html"
+    "livePreview.defaultPreviewPath": "d:\\Workspace\\JavaPrj\\ECMA5\\브라우저객체.html",
+    "liveServer.settings.port": 5501
 }
