--- a/Final/rland-api/src/main/resources/application.properties
+++ b/Final/rland-api/src/main/resources/application.properties
@@ -1,2 +1,4 @@
-spring.servlet.multipart.max-file-size=100MB
-spring.servlet.multipart.max-request-size=100MB
+spring.datasource.url=jdbc:mariadb://db.newlecture.com:3306/rlanddb
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.datasource.username=rland
+spring.datasource.password=20220823
