--- a/Final/rland-api/src/main/resources/application.properties
+++ b/Final/rland-api/src/main/resources/application.properties
@@ -2,3 +2,6 @@ spring.datasource.url=jdbc:mariadb://db.newlecture.com:3306/rlanddb
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.datasource.username=rland
 spring.datasource.password=20220823
+
+logging.level.org.hibernate.=DEBUG
+spring.jpa.properties.hibernate.format_sql=true
