20230515 공부 : 구글로그인

--- a/Final/rland-api/src/main/resources/application.properties
+++ b/Final/rland-api/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.datasource.password=20220823
 
 logging.level.org.hibernate.=DEBUG
 spring.jpa.properties.hibernate.format_sql=true
+
+spring.security.oauth2.client.registration.google.client-id=824324547787-dhrf9o0rurdcclahpfko8sc1khsgkfte.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
